# pythonPackageCookiecutter

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  azure-pipelines.yml  pyproject.toml
{{cookiecutter.project_slug}}/docs/: index.md  installation.md
